<resources>
    <string name="app_name">TuneStacker</string>
    <string name="login_button">Login</string>
    <string name="forgot_password_button">Forgot your password?</string>
    <string name="register_field_email_hint">Email</string>
    <string name="register_field_password_hint">Password</string>
    <string name="register_text_display">Create New Account</string>
    <string name="register_button">Register</string>
    <string name="permissions_failed_storage">Please enable Storage Permissions.</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Library</string>
    <string name="title_settings">Settings</string>
    <string name="dashboard_my_playlist">My Playlists</string>
    <string name="dashboard_imported">Imported</string>
    <string name="dashboard_saved_songs">Saved Songs</string>
    <string name="create_playlist_display">Create Playlist</string>
    <string name="import_playlist_display">Import Playlist</string>
    <string name="add_song_display">Add Song</string>
    <string name="export_option_text">Export</string>
    <string name="remove_option_text">Remove</string>
    <string name="delete_option_text">Delete</string>
    <string name="sync_option_text">Sync</string>
    <string name="backup_option_text">Backup</string>
    <string name="rename_option_text">Rename</string>
    <string name="play_option_text">Play</string>
    <string name="toggle_option_text">Toggle Playback</string>
    <string name="playlist_view_allsongs">All Songs</string>
    <string name="playlist_view_imports">Imports</string>
    <string name="playlist_view_playall">&#032;Play All</string>
    <string name="playlist_view_shuffleplay">&#032;Shuffle Play</string>
    <string name="popup_create_new_title">Add New Song</string>
    <string name="popup_enter_url">Enter URL:</string>
    <string name="popup_enter_url_hint">https://example.com</string>
    <string name="popup_create_playlist_hint">Name of the Playlist</string>
    <string name="popup_add_existing_title">Add Existing</string>
    <string name="popup_or_display">or</string>
    <string name="popup_select_file">Select File:</string>
    <string name="popup_choose">Choose</string>
    <string name="popup_download">&#032;Download</string>
    <string name="popup_confirm">Confirm</string>
    <string name="popup_search_hint">Search</string>
    <string name="popup_continue">Continue</string>
    <string name="popup_wifi_label">WIFI</string>
    <string name="popup_warning_line_1">Warning: You are currently using mobile data.</string>
    <string name="popup_warning_line_2">Would you like to continue?</string>
    <string name="settings_download_title">Download</string>
    <string name="settings_embed_thumbnail">Embed Thumbnail</string>
    <string name="settings_download_thumbnail">Download Thumbnail for Cache</string>
    <string name="settings_export_override">Override Existing File</string>
    <string name="settings_output_extension">Output File Extension</string>
    <string name="settings_export_title">Export</string>
    <string name="settings_data_title">Data</string>

    <string name="notification_label_play">Play</string>
    <string name="notification_label_pause">Pause</string>
    <string name="notification_label_next">Next</string>
    <string name="notification_label_prev">Previous</string>

    <string-array name="valid_audio_ext">
        <item>opus</item>
        <item>mp3</item>
        <item>m4a</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_nested_playlist">NestedPlaylistActivity</string>
    <!-- Strings used for fragments for navigation -->
</resources>