<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/tune_stacker_brand"
            app:tint="?attr/colorSecondary" />

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/register_field_email_hint"
            android:inputType="textWebEmailAddress"
            android:padding="10dp" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/register_field_password_hint"
            android:inputType="textPassword"
            android:padding="10dp" />

        <android.widget.Button
            android:id="@+id/button_login_confirm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:background="@drawable/button_background_primary"
            android:text="@string/login_button"
            android:textColor="?attr/colorSecondary"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/forgot_password_button"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="12sp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>