<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:orientation="vertical"
            android:background="@android:color/transparent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="?attr/colorSecondary"
                android:text="@string/popup_create_new_title" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="6dp"
                android:background="?attr/colorOnSecondary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="?attr/colorSecondary"
                android:layout_marginTop="10dp"
                android:text="@string/popup_enter_url" />

            <EditText
                android:id="@+id/edit_text_url"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:textSize="12sp"
                android:background="@drawable/edit_text_background"
                android:inputType="textUri"
                android:maxLines="1"
                android:padding="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="?attr/colorSecondary"
                android:layout_marginTop="16dp"
                android:text="@string/popup_or_display" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="?attr/colorSecondary"
                android:layout_marginTop="16dp"
                android:text="@string/popup_select_file" />

            <TextView
                android:id="@+id/textView_choose_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorSecondary"
                android:layout_marginTop="2dp"
                android:background="?attr/colorOnSecondary"
                android:padding="8dp"
                android:textSize="12sp"
                android:text="@string/popup_choose" />

            <TextView
                android:id="@+id/textView_file_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorSecondary"
                android:layout_marginTop="4dp"
                android:background="@android:color/transparent"
                android:maxLines="1"
                android:textSize="11sp"
                android:textStyle="italic"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView_download_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorSecondary"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background_primary"
                android:padding="6dp"
                android:textSize="18sp"
                android:text="@string/popup_download"
                app:drawableStartCompat="@drawable/ic_baseline_download_24"
                android:paddingEnd="12dp"
                android:paddingStart="4dp"
                app:drawableTint="?attr/colorSecondary" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>