<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addNewPopupSingle.AddNewPopupSingleActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/colorPopupBackground"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/import_playlist_display"
            android:textColor="?attr/colorSecondary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="6dp"
            android:background="?attr/colorOnSecondary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/popup_enter_url"
            android:textColor="?attr/colorSecondary"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_text_url"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/edit_text_background"
            android:inputType="textUri"
            android:maxLines="1"
            android:padding="8dp"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/youtube_icon"
                android:scaleType="centerCrop"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textView_download_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_background_primary"
            android:padding="6dp"
            android:paddingStart="4dp"
            android:paddingEnd="12dp"
            android:text="@string/popup_download"
            android:textColor="?attr/colorSecondary"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_baseline_download_24"
            app:drawableTint="?attr/colorSecondary" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>