<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.playlistviewnested.PlaylistNestedActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView_playlist"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginStart="4dp"
                app:srcCompat="@drawable/med_res"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/playlist_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:maxLines="1"
                    android:textColor="?attr/colorSecondary"
                    android:textStyle="bold"
                    android:ellipsize="end"
                    android:textSize="22sp"/>

                <TextView
                    android:id="@+id/playlist_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">


            <android.widget.Button
                android:id="@+id/button_playall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:gravity="center"
                android:background="@drawable/button_background_primary"
                android:text="@string/playlist_view_playall"
                android:paddingStart="4dp"
                android:paddingEnd="8dp"
                android:textColor="?attr/colorSecondary"
                android:drawableStart="@drawable/ic_baseline_play_circle_outline_24"
                android:drawableTint="?attr/colorSecondary"
                android:textSize="14sp" />

            <android.widget.Button
                android:id="@+id/button_shuffleplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:gravity="center"
                android:background="@drawable/button_background"
                android:text="@string/playlist_view_shuffleplay"
                android:paddingStart="4dp"
                android:paddingEnd="8dp"
                android:textColor="?attr/colorSecondary"
                android:drawableStart="@drawable/ic_baseline_shuffle_24"
                android:drawableTint="?attr/colorSecondary"
                android:textSize="14sp" />

        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playlist_view_allsongs" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playlist_view_imports" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:background="?attr/colorOnSecondary" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>